# AVS_Davydov_Bpi_11_21_HW2

./: CMakeLists.txt  complex.cpp  complex.h  container.cpp  container.h  fraction.cpp  fraction.h  main.cpp  number.cpp  number.h  polar.cpp  polar.h  rnd.h  Пояснительная_записка.txt
tests/input/: test01.txt  test02.txt  test03.txt  test04.txt  test05.txt
tests/output/: out01.txt  out02.txt  rundomOut01.txt  rundomOut02.txt  rundomOut03.txt  rundomOut04.txt
